--- a/gb/21/9/5/n13211586.md
+++ b/gb/21/9/5/n13211586.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wqdccn312/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wqdccn312/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wqdccn312/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wqdccn312/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wqdccn312/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wqdccn312/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wqdccn312/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wqdccn312/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wqdccn312/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wqdccn312/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wqdccn312/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wqdccn312/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wqdccn312/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wqdccn312/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wqdccn312/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wqdccn312/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wqdccn312/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wqdccn312/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wqdccn312/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wqdccn312/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wqdccn312/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wqdccn312/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wqdccn312/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wqdccn312/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>全国古迹日新北奇迹科技走读 加实体导览</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13211591-515161-600x400.jpg" />
 <h6>市定古迹中和瑞穗配水池细节.（文化局提供）
 </h6>
 <hr>
-<p>【大纪元2021年09月05日讯】（大纪元记者宋顺澈台湾新北市报导）全国<ahref="https://github.com/wqdccn312/djy/blob/master/gb/tag/%E5%8F%A4%E8%BF%B9%E6%97%A5.md#1">古迹日</a>可以透过赏游，参观珍贵的<ahref="https://github.com/wqdccn312/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E8%B5%84%E4%BA%A7.md#1">文化资产</a>、<ahref="https://github.com/wqdccn312/djy/blob/master/gb/tag/%E8%80%83%E5%8F%A4%E9%81%97%E5%9D%80.md#1">考古遗址</a>等，激发大众对于文化资产的兴趣。在疫情改变世人生活的状态下，新北文化局推出整合<ahref="https://github.com/wqdccn312/djy/blob/master/gb/tag/%E8%99%9A%E6%8B%9F%E5%AE%9E%E5%A2%83.md#1">虚拟实境</a>及实体体验的全国古迹日系列活动，扩大民众亲近文化资产的多元管道。每年9月固定举办的古迹赏游，让民众对古迹有更进一步的认识。</p>
-<p>新北市文化局龚雅雯局长表示，为因应疫情，今年全国<ahref="https://github.com/wqdccn312/djy/blob/master/gb/tag/%E5%8F%A4%E8%BF%B9%E6%97%A5.md#1">古迹日</a>主打“新北奇迹?科技走读”，主推线上<ahref="https://github.com/wqdccn312/djy/blob/master/gb/tag/%E8%99%9A%E6%8B%9F%E5%AE%9E%E5%A2%83.md#1">虚拟实境</a>文资小旅行，以3D环景导览文资地景，辅以其他多元导览体验，邀请民众一起探索在地<ahref="https://github.com/wqdccn312/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E8%B5%84%E4%BA%A7.md#1">文化资产</a>。系列活动分为“综览新北”、“微观新北”、“艺探新北”、“奇趣新北”等4大主题，串联十三行博物馆、黄金博物馆、淡水古迹博物馆、林本源园邸、空军三重一村、五股守让堂及斩龙山遗址文化公园等馆舍场域推出系列精彩活动。</p>
+<p>【大纪元2021年09月05日讯】（大纪元记者宋顺澈台湾新北市报导）全国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%A4%E8%BF%B9%E6%97%A5.md#1">古迹日</a>可以透过赏游，参观珍贵的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E8%B5%84%E4%BA%A7.md#1">文化资产</a>、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%80%83%E5%8F%A4%E9%81%97%E5%9D%80.md#1">考古遗址</a>等，激发大众对于文化资产的兴趣。在疫情改变世人生活的状态下，新北文化局推出整合<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%99%9A%E6%8B%9F%E5%AE%9E%E5%A2%83.md#1">虚拟实境</a>及实体体验的全国古迹日系列活动，扩大民众亲近文化资产的多元管道。每年9月固定举办的古迹赏游，让民众对古迹有更进一步的认识。</p>
+<p>新北市文化局龚雅雯局长表示，为因应疫情，今年全国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%A4%E8%BF%B9%E6%97%A5.md#1">古迹日</a>主打“新北奇迹?科技走读”，主推线上<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%99%9A%E6%8B%9F%E5%AE%9E%E5%A2%83.md#1">虚拟实境</a>文资小旅行，以3D环景导览文资地景，辅以其他多元导览体验，邀请民众一起探索在地<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E8%B5%84%E4%BA%A7.md#1">文化资产</a>。系列活动分为“综览新北”、“微观新北”、“艺探新北”、“奇趣新北”等4大主题，串联十三行博物馆、黄金博物馆、淡水古迹博物馆、林本源园邸、空军三重一村、五股守让堂及斩龙山遗址文化公园等馆舍场域推出系列精彩活动。</p>
 <figure id="attachment_13211590" aria-describedby="caption-attachment-13211590" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13211590-515160.jpg"><img class="size-large wp-image-13211590" src="https://i.epochtimes.com/assets/uploads/2021/09/id13211590-515160-600x351.jpg" alt="" width="600" b="351" /></a><figcaption id="caption-attachment-13211590" class="wp-caption-text">“马岗石砌屋建筑在地记忆展览—石至今日”建构马岗渔村在地人文记忆.（文化局提供）</figcaption></figure>
 <figure id="attachment_13211589" aria-describedby="caption-attachment-13211589" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13211589-515159.jpg"><img class="size-large wp-image-13211589" src="https://i.epochtimes.com/assets/uploads/2021/09/id13211589-515159-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-13211589" class="wp-caption-text">配合碧潭周边文资景点规划全新导览路线.（文化局提供）</figcaption></figure>
 <figure id="attachment_13211588" aria-describedby="caption-attachment-13211588" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13211588-515158.jpg"><img class="size-large wp-image-13211588" src="https://i.epochtimes.com/assets/uploads/2021/09/id13211588-515158-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13211588" class="wp-caption-text">板桥迪毅堂，自110年11月起每双周日上午开放预约导览.（文化局提供）</figcaption></figure>
@@ -29,47 +29,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/20/8/7/n12314138.md#1">见证基隆和平岛历史  蔡英文参访考古遗址</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/20/9/1/n12372474.md#1">2020全国古迹日 体验在地文化开场</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/20/9/2/n12375220.md#1">走入历史现场   屏东全国古迹日访牡丹社事件</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/20/9/12/n12398696.md#1">“让旧监自由”古迹日及木都推广成果展</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/2/1/n12725281.md#1">虚拟实境相助 韩国男子与亡妻团聚</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/3/28/n12840955.md#1">虚拟实境融入船舶设计 新兴科技融入教学</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/4/6/n12861169.md#1">高市特有祭仪 申请登录原住民族无形文化资产</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/6/29/n13055784.md#1">8300年前马祖亮岛遗址 获国定考古遗址</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/7/28/n13120927.md#1">和兴青创基地 再创彰化文化资产新亮点</a></li>
-<li><a href="https://github.com/wqdccn312/djy/blob/master/gb/21/8/22/n13179318.md#1">第一号文化资产  鸡笼中元祭水灯绕境祈福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/7/n12314138.md#1">见证基隆和平岛历史  蔡英文参访考古遗址</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/1/n12372474.md#1">2020全国古迹日 体验在地文化开场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/2/n12375220.md#1">走入历史现场   屏东全国古迹日访牡丹社事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/12/n12398696.md#1">“让旧监自由”古迹日及木都推广成果展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/2/1/n12725281.md#1">虚拟实境相助 韩国男子与亡妻团聚</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840955.md#1">虚拟实境融入船舶设计 新兴科技融入教学</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/4/6/n12861169.md#1">高市特有祭仪 申请登录原住民族无形文化资产</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/29/n13055784.md#1">8300年前马祖亮岛遗址 获国定考古遗址</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/28/n13120927.md#1">和兴青创基地 再创彰化文化资产新亮点</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/22/n13179318.md#1">第一号文化资产  鸡笼中元祭水灯绕境祈福</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/8/n9817759.md#1" target="_blank">袁斌：“十月革命”真相与俄国三大倒退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113058.md#1" target="_blank">一位农家女的奇异经历</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/13/n11255006.md#1" target="_blank">【征文】凌晓辉：贞洁论（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/5/n11026306.md#1" target="_blank">冰天雪地 瑞典法轮功学员传真相 感动民众</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/8/28/n13194661.md#1">【未解之谜】不可思议的撞脸 是转世还是巧合？</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/8/27/n13191066.md#1">古人最常用的化妆品是什么？</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/7/23/n13108846.md#1">【命理】清朝时风水征验人宅吉凶的一些事</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/8/29/n13196066.md#1">告别进化论</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/4/n13210864.md#1">【横河观点】胡编怼党媒 权斗或双簧？</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/3/n13208754.md#1">【财商天下】多国央行“收水” 中国反其道而行</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/3/n13209130.md#1">【新闻看点】菅义伟担责将离任 大陆穷孩入学难</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/3/n13207021.md#1">赵薇“幕后总指挥”曝光？</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/2/n13206414.md#1">北大经济学教授罕见警告：走向“共同贫穷”</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/3/n13209059.md#1">赵薇遭封杀 林心如一动作获赞“有先见之明”</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/3/n13208868.md#1">为何近年只当厨师不拍电影？谢霆锋感伤回应</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/2/n13206073.md#1">黄秋生庆60岁生日 杜汶泽祝“好人一生平安”</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/3/n13209273.md#1">工作室微博被禁言至今 赵丽颖9月行程成谜</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/2/n13204952.md#1">美国女子在家睡觉 被陨石砸到</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/3/n13208358.md#1">空气炸锅做的这些蔬菜 好吃得停不下来</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/1/n13201822.md#1">远离失智、忧郁症！研究揭最佳睡眠时间</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/3/n13207511.md#1">美国鳄鱼一口咬下空拍机 嘴巴冒出浓烟</a></li>
-<li><a href="https://github.com/lyetbc306/djy/blob/master/gb/21/9/2/n13205789.md#1">生活中处处藏毒素 黑豆、绿豆加1物解百毒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wqdccn312/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wqdccn312/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/5/n13211586.htm">全国古迹日新北奇迹科技走读 加实体导览</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/5/n13211586.htm">全国古迹日新北奇迹科技走读 加实体导览</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wqdccn312/djy/blob/master/gb/21/9/5/n13211586.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wqdccn312/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wqdccn312/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wqdccn312/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wqdccn312/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqdccn312/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/9/5/n13211586.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
